ferritin/src/snapshots/ferritin__tests__fuzzy_matching_suggestions_json.snap
---
source: ferritin/src/tests.rs
expression: "render_json_for_tests_rooted(Commands::get(\"crate::TestStruct::incrementCount\"),\n& get_fixture_crate_path ())"
---
{
  "error": "notFound",
  "query": "crate::TestStruct::incrementCount",
  "suggestions": [
    {
      "path": "crate::TestStruct::ASSOCIATED_CONST",
      "kind": "assocconst",
      "url": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/struct.TestStruct.html#associatedconstant.ASSOCIATED_CONST"
    },
    {
      "path": "crate::TestStruct::new",
      "kind": "function",
      "url": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/struct.TestStruct.html#method.new"
    },
    {
      "path": "crate::TestStruct::get_field",
      "kind": "function",
      "url": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/struct.TestStruct.html#method.get_field"
    },
    {
      "path": "crate::TestStruct::increment_count",
      "kind": "function",
      "url": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/struct.TestStruct.html#method.increment_count"
    },
    {
      "path": "crate::submodule",
      "kind": "module",
      "url": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/submodule/index.html"
    }
  ]
}
