ferritin/src/snapshots/ferritin__tests__fuzzy_matching_suggestions_plain_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::TestStruct::incrementCount\"),\nOutputMode :: Plain, & get_fixture_crate_path ())"
---
Could not find 'crate::TestStruct::incrementCount'

Did you mean:

  ◦ crate::TestStruct::increment_count

  ◦ crate::TestStruct::new

  ◦ crate::TestStruct::ASSOCIATED_CONST

  ◦ crate::TestStruct::get_field

  ◦ crate::TestEnum
