ferritin/src/snapshots/ferritin__tests__fuzzy_matching_suggestions_test_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::TestStruct::incrementCount\"),\nOutputMode :: TestMode, & get_fixture_crate_path ())"
---
<p>
Could not find 'crate::TestStruct::incrementCount'</p>
<p>
Did you mean:</p>
<list>
  <item><p>
crate::TestStruct::increment_count</p>
</item>
  <item><p>
crate::TestStruct::new</p>
</item>
  <item><p>
crate::TestStruct::ASSOCIATED_CONST</p>
</item>
  <item><p>
crate::TestStruct::get_field</p>
</item>
  <item><p>
crate::TestEnum</p>
</item>
</list>
