ferritin/src/snapshots/ferritin__tests__fuzzy_matching_suggestions_tty_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::TestStruct::incrementCount\"),\nOutputMode :: Tty, & get_fixture_crate_path ())"
---
Could not find 'crate::TestStruct::incrementCount'

Did you mean:

  ◦ [crate::TestStruct::increment_count](https://docs.rs/fixture-crate/0.1.0/fixture_crate/struct.TestStruct.html#method.increment_count)

  ◦ [crate::TestStruct::new](https://docs.rs/fixture-crate/0.1.0/fixture_crate/struct.TestStruct.html#method.new)

  ◦ [crate::TestStruct::ASSOCIATED_CONST](https://docs.rs/fixture-crate/0.1.0/fixture_crate/struct.TestStruct.html#associatedconstant.ASSOCIATED_CONST)

  ◦ [crate::TestStruct::get_field](https://docs.rs/fixture-crate/0.1.0/fixture_crate/struct.TestStruct.html#method.get_field)

  ◦ [crate::TestEnum](https://docs.rs/fixture-crate/0.1.0/fixture_crate/submodule/enum.TestEnum.html)
