ferritin/src/snapshots/ferritin__tests__fuzzy_matching_trait_member_json.snap
---
source: ferritin/src/tests.rs
expression: "render_json_for_tests_rooted(Commands::get(\"crate::TestTrait::test_methid\"), &\nget_fixture_crate_path ())"
---
{
  "error": "notFound",
  "query": "crate::TestTrait::test_methid",
  "suggestions": [
    {
      "path": "crate::TestTrait::test_method",
      "kind": "function",
      "url": "https://docs.rs/fixture-crate/0.1.0/fixture_crate/trait.TestTrait.html#method.test_method"
    },
    {
      "path": "crate::TestTrait::T",
      "kind": "assoctype",
      "url": "https://docs.rs/fixture-crate/0.1.0/fixture_crate/trait.TestTrait.html#associatedtype.T"
    },
    {
      "path": "crate::TestTrait::process",
      "kind": "function",
      "url": "https://docs.rs/fixture-crate/0.1.0/fixture_crate/trait.TestTrait.html#method.process"
    },
    {
      "path": "crate::TestTrait::ASSOCIATED_CONSTANT",
      "kind": "assocconst",
      "url": "https://docs.rs/fixture-crate/0.1.0/fixture_crate/trait.TestTrait.html#associatedconstant.ASSOCIATED_CONSTANT"
    },
    {
      "path": "crate::TestEnum",
      "kind": "enum",
      "url": "https://docs.rs/fixture-crate/0.1.0/fixture_crate/submodule/enum.TestEnum.html"
    }
  ]
}
