ferritin/src/snapshots/ferritin__tests__fuzzy_matching_trait_member_plain_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::TestTrait::test_methid\"),\nOutputMode :: Plain, & get_fixture_crate_path ())"
---
Could not find 'crate::TestTrait::test_methid'

Did you mean:

  ◦ crate::TestTrait::ASSOCIATED_CONSTANT

  ◦ crate::TestTrait::T

  ◦ crate::TestTrait::test_method

  ◦ crate::TestTrait::process

  ◦ crate::submodule
