ferritin/src/snapshots/ferritin__tests__fuzzy_matching_trait_member_test_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::TestTrait::test_methid\"),\nOutputMode :: TestMode, & get_fixture_crate_path ())"
---
<p>
Could not find 'crate::TestTrait::test_methid'</p>
<p>
Did you mean:</p>
<list>
  <item><p>
crate::TestTrait::ASSOCIATED_CONSTANT</p>
</item>
  <item><p>
crate::TestTrait::T</p>
</item>
  <item><p>
crate::TestTrait::test_method</p>
</item>
  <item><p>
crate::TestTrait::process</p>
</item>
  <item><p>
crate::submodule</p>
</item>
</list>
